Resize elements, fix image stretching & button look

--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* * {
-    border: 1px solid red;
-} */
-
 body {
     font-family: Roboto;
     margin: 0;
@@ -14,18 +10,29 @@ p {
     margin: 0;
 }
 
-/* #fjord {
-    width: 400px;
-} */
-
 img {
-    width: 80px;
+    width: 140px;
+    object-fit: cover;
+    border-radius: 12px;
+}
+
+.small-image {
+    border-radius: 12px;
+    border: 3px solid #3882f6;
+}
+
+.thumbnail {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 150px;
 }
 
 .header,
 .front,
 .footer {
-    background: #1F2937;
+    background: #1f2937;
     width: 100%;
 }
 
@@ -51,7 +58,13 @@ img {
     padding: 64px 0;
 }
 
+.front-content {
+    gap: 32px;
+}
+
 .quote-content {
+    max-width: 780px;
+    margin: auto;
     padding: 96px 0;
     display: flex;
     flex-direction: column;
@@ -71,6 +84,14 @@ img {
 .front-left,
 .front-right {
     flex: 1;
+}
+
+.front-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 8px;
 }
 
 .footer {
@@ -101,6 +122,7 @@ a {
 .container {
     display: flex;
     margin-bottom: 96px;
+    gap: 16px;
 }
 
 .recrutment-box {
@@ -126,7 +148,6 @@ a {
 .quote-text {
     font-weight: lighter;
     font-style: italic;
-
 }
 
 h2 {
@@ -135,26 +156,54 @@ h2 {
     color: #1f2937;
 }
 
-.main {
-    color: #f9faf8;
-}
-
 h1 {
     color: #f9faf8;
     font-size: 48px;
     font-weight: bolder;
+    margin: 0;
 }
 
 #logo {
     font-size: 24px;
 }
 
+.main,
 .secondary {
-    color: #e5e7eb;
-    font-size: 18px;
+    color: #f9faf8;
+}
+
+.main {
+    font-weight: bold;
+}
+
+.subtext {
+    color: #1f2937;
+    margin-top: 6px;
 }
 
 .text-box {
-    background: #3882f6;
+    display: flex;
+    flex-direction: column;
 }
 
+.blue-box {
+    background: #3882f6;
+    padding: 32px 80px;
+    display: flex;
+    width: 800px;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 12px;
+}
+
+button {
+    background: #3882f6;
+    border: 1px solid white;
+    border-radius: 8px;
+    padding: 6px 24px;
+    color: white;
+}
+
+#up {
+    border: 0;
+}
